--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.6
 Flask==3.0.3
 gunicorn==22.0.0
 numpy==1.24.2
+scikit-learn==1.2.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
